# journald-2-syslog

./: Cargo.toml  README.md  rustfmt.toml
configs/: defaults.yaml  filebeat.yml
src/: config_help.txt  defaults.yaml  jd_config.rs  main.rs
