# Copyright 2018 Andre Stemmet

# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at

# http://www.apache.org/licenses/LICENSE-2.0

# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing
# permissions and limitations under the License.

[package]
name = "journaldeliver"
version = "0.9.0"
authors = ["Andre Stemmet <psox(at)st8l.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
chrono = { version = "0.4.6", features = ["serde"] }
clap =  "2.32.0"
config = "0.9.1"
failure = "0.1.4"
parse_duration = "1.0.1"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
serde_yaml = "0.8.8"
systemd = "0.4.0"
nix = "0.12.0"
